@@ -53,8 +53,6 @@ namespace Orthanc
     std::string log_;
     HttpClient httpClient_;
 
-    static LuaContext& GetLuaContext(lua_State *state);
-
     static int PrintToLog(lua_State *state);
     static int ParseJson(lua_State *state);
     static int DumpJson(lua_State *state);
@@ -72,8 +70,6 @@ namespace Orthanc
 
     void ExecuteInternal(std::string* output,
                          const std::string& command);
-
-    void PushJson(const Json::Value& value);
 
     void GetJson(Json::Value& result,
                  int top);
@@ -118,7 +114,11 @@ namespace Orthanc
     void SetGlobalVariable(const char* name,
                            void* value);
 
+    static LuaContext& GetLuaContext(lua_State *state);
+
     static const void* GetGlobalVariable(lua_State* state,
                                          const char* name);
+
+    void PushJson(const Json::Value& value);
   };
 }
